2023-04-01  Youling Tang  <tangyouling@loongson.cn>

	* loongarch_reloc.def: Add RELOC_TYPE B16 to RELAX.

2023-02-07  Mark Wielaard  <mark@klomp.org>

	* libebl_CPU.h (dwarf_peeled_die_type): Explicitly handle
	DW_TAG_unspecified_type as if there was no DW_AT_type.

2023-01-19  Mark Wielaard  <mark@klomp.org>

	* sparc_reloc.def (NONE): Add EXEC and DYN.

2022-12-21  Shahab Vahedi  <shahab@synopsys.email>

	* Makefile.am (modules): Add arc.
	(arc_SRCS): Added.
	(libebl_backends_a_SOURCES): Append arc_SRCS.
	* arc_init.c: New file.
	* arc_reloc.def: New file.
	* arc_symbol.c: New file.

2022-12-02  Hengqi Chen  <hengqi.chen@gmail.com>

	* Makefile.am (modules): Add loongarch.
	* loongarch_init.c: New file.
	* loongarch_reloc.def: New file.
	* loongarch_symbol.c: New file.

2022-08-09  Andreas Schwab  <schwab@suse.de>

	* riscv_init.c (riscv_init): HOOK segment_type_name,
	section_type_name, dynamic_tag_name and dynamic_tag_check.
	* riscv_symbol.c (riscv_segment_type_name): New function.
	(riscv_section_type_name): Likewise.
	(riscv_dynamic_tag_name): Likewise.
	(riscv_dynamic_tag_check): Likewise.

2022-06-01  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (arm_SRCS): Add arm_machineflagname.c.
	* arm_init.c (arm_init): Hook in arm_machine_flag_name.
	* arm_machineflagname.c: New file.

2022-02-16  Mark Wielaard  <mark@klomp.org>

	* ppc_initreg.c (ppc_set_initial_registers_tid): Define struct
	pt_regs32. Use PTRACE_GETREGSET.

2021-09-29  William Cohen  <wcohen@redhat.com>

	* riscv_init.c (riscv_return_value_location_lp64f): New function
	declaration.
	(riscv_return_value_location_lp64): Likewise.
	(riscv_init): Set return_value_location based on elf class and
	ehdr flags.
	* riscv_retval.c (riscv_return_value_location_lp64d): Renamed to...
	(riscv_return_value_location_lp64ifd): ...this. Handle single,
	double, float _Complex and double _Complex cases.
	(riscv_return_value_location_lp64d): New function.
	(riscv_return_value_location_lp64f): Likewise.
